Fixed bug with social icons at header appearing too high

--- a/style.css
+++ b/style.css
@@ -491,6 +491,11 @@ nav .fa-solid {
     cursor: pointer;
   }
 
+  .header-links .social-icons i {
+    margin-top: 100px;
+    font-size: 100px;
+  }
+
   /* ---------- ABOUT ME ---------- */
 
   .sub-title {
